# hotpath

./: .smoke-bench-a.json  .smoke-bench-b.json  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml
cpp_tests/: test_aggregate.cpp  test_attach.cpp  test_audit.cpp  test_bench_json.cpp  test_cache_analyzer.cpp  test_categorizer.cpp  test_cli.cpp  test_clock_control.cpp  test_export.cpp  test_interactive.cpp  test_log_parser.cpp  test_parser.cpp  test_report.cpp  test_request_trace.cpp  test_serve_report.cpp  test_server.cpp  test_sglang_metrics.cpp  test_stability.cpp  test_store.cpp  test_targets.cpp  test_traffic.cpp  test_traffic_replayer.cpp  test_validate.cpp  test_vllm_metrics.cpp  test_workload_classifier.cpp
cpp_tests/fixtures/: smoke_prefix_traffic.jsonl  smoke_traffic.jsonl
docs/: REPORT_CONCEPT.md
hotpath_py/: __init__.py  bench_cuda.py  serve_report.py
include/hotpath/: cache_analyzer.h  clock_control.h  disagg_model.h  kv_config.h  log_parser.h  report.h  request_trace.h  serve_profiler.h  store.h  traffic_replayer.h
include/rlprof/: clock_control.h  report.h  stability.h  store.h  traffic.h
src/: aggregate.cpp  clock_control.cpp  doctor.cpp  export.cpp  interactive.cpp  interactive.h  main.cpp  remote.cpp  report.cpp  stability.cpp  store.cpp  targets.cpp  traffic.cpp  validate.cpp
src/advisor/: disagg_model.cpp  kv_config.cpp  recommender.cpp  workload_classifier.cpp
src/bench/: runner.cpp
src/export/: otlp_export.cpp
src/profiler/: attach.cpp  parser.cpp  (+5 more)
tools/: bench_cuda.py  bench_cuda_kernels.py
(+12 files in other folders)
